<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    >
    <TextView
        android:id="@+id/search_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/search_label" />
    <Button
        android:id="@+id/search_term_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/search_label"
        android:text="@string/me"
        />
    <cc.hughes.droidchatty2.widget.ClearableEditText
        android:id="@+id/search_term"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/search_term_button"
        android:layout_alignBottom="@+id/search_term_button"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/search_author_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/author_label"
        android:layout_below="@+id/search_term"
        />
    <Button
        android:id="@+id/search_author_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/search_author_label"
        android:layout_alignParentRight="true"
        android:text="@string/me"
        />
    <cc.hughes.droidchatty2.widget.ClearableEditText
        android:id="@+id/search_author"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_toLeftOf="@+id/search_author_button"
        android:layout_alignBottom="@+id/search_author_button"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/search_parent_author_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/search_author"
        android:text="@string/parent_author_label"
        />
    <Button
        android:id="@+id/search_parent_author_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/search_parent_author_label"
        android:text="@string/me"
        />
    <cc.hughes.droidchatty2.widget.ClearableEditText
        android:id="@+id/search_parent_author"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_toLeftOf="@+id/search_parent_author_button"
        android:layout_alignBottom="@+id/search_parent_author_button"
        android:inputType="text"
        />
    <Button
        android:id="@+id/search"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/search_parent_author"
        android:drawableLeft="@drawable/ic_action_search"
        android:text="@string/search"
        />
</RelativeLayout>